# kameshsampath.demos

./: .ansible-lint  .buildinfo  .editorconfig  .env.example  .gitignore  .gitpod.Dockerfile  .gitpod.yml  CHANGELOG.md  Makefile  README.md  docs.sh  galaxy.yml  genindex.html  index.html  install.html  objects.inv  plugins_in_collection.html  project_info.html  pyproject.toml  requirements.yml  roles.html  search.html  searchindex.js  workflow_check.sh
.github/workflows/: prepare-release.yml  release.yml  update-galaxy.yml
_sources/: index.rst.txt  install.rst.txt  plugins_in_collection.rst.txt  project_info.rst.txt
_sources/modules/: aws_open_id_connect_provider_info.rst.txt  aws_openid_connect_provider.rst.txt
_sources/roles/: openshift_spices.md.txt
builder-ee/: README.adoc  execution-environment.yml  requirements.txt  requirements.yml
documentation/: Makefile  Makefile.sphinx  requirements.txt
documentation/source/: conf.py  roles.rst
modules/: aws_open_id_connect_provider_info.html  aws_openid_connect_provider.html
molecule/: test.sh
molecule/common/: requirements.yml
molecule/default/: cleanup.yml  converge.yml  prepare.yml  verify.yml
molecule/dynamodb/: INSTALL.rst  cleanup.yml  converge.yml  molecule.yml  verify.yml
molecule/host_vars/: instance.template
plugins/modules/: aws_open_id_connect_provider.py  aws_open_id_connect_provider_info.py
roles/: openshift_spices.html  rosa_demos.html
tests/: requirements.yml
tests/integration/: integration_config.yml.template  requirements.txt
tests/unit/: constraints.txt
(+37 files in other folders)
